# twitter-init-kit

./: .TWITTERKIT_STATUS.md  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  PHASE_3_COMPLETE.md  PHASE_6_COMPLETE.md  README.md  SUPPORT.md  pyproject.toml  spec-driven.md
.github/workflows/scripts/: create-release-packages.sh
.twitterkit/templates/commands/: twitterkit.constitution.md  twitterkit.taskstoissues.md
docs/: README.md  index.md  installation.md  local-development.md  maintainer-guide.md  quickstart.md  templates.md  upgrade.md
examples/my-twitter/memory/: constitution.md
examples/my-twitter/specs/agentii_twitter_launch/: plan.md  spec.md  tasks.md
refs/: 0_overview.md  1_principles_for_constitution.md  2_ define_for_specify.md  3_project_mangement_for_plan.md  4_pm_tasking_for_tasks.md  6_claude_code.md
refs/5_more/: 5_more_references.md  TweetClaw-Evidence-Loop.md
scripts/: build-templates.sh  test-template-build.sh  validate-templates.sh
specs/000-twitter-init-kit-foundation/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pmf-kit-variant/: IMPLEMENTATION-STATUS.md  spec.md  tasks.md
specs/001-pmf-kit-variant/checklists/: requirements.md
specs/002-automated-template-releases/: data-model.md  research.md  spec.md  tasks.md
specs/002-automated-template-releases/checklists/: requirements.md
src/pmf_cli/: __init__.py
src/twitterify_cli/: __init__.py  git_utils.py  template_engine.py
src/twitterify_cli/commands/: __init__.py  check.py  init.py
