[project]
name = "twitter-cli"
version = "0.0.22"
description = "twitter CLI, part of twitter-Kit. A tool to bootstrap your projects for twitter (Product-Market-Fit) discovery and validation."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
twitter = "twitter_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twitter_cli"]

