[project]
name = "twitterify-cli"
version = "0.1.0"
description = "twitterify CLI, part of Twitter-Init-Kit. A domain-specific variant of Spec-Kit for systematic Twitter marketing and growth for AI/LLM SaaS products."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
twitterify = "twitterify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twitterify_cli"]

